# tara

./: .env.example  .gitignore  Makefile  README.md  architecture-diagram.md  data-model.md  project-structure.md  tara的项目需求.txt  workflow.md  架构设计.txt
backend/diagram-service/: Dockerfile  pyproject.toml
backend/diagram-service/app/: config.py  main.py
backend/diagram-service/app/api/v1/: router.py
backend/diagram-service/app/common/: __init__.py
backend/diagram-service/app/common/models/: report.py
backend/diagram-service/app/common/schemas/: threat_risk.py
backend/diagram-service/app/services/: diagram_service.py
backend/diagram-service/tests/: conftest.py
backend/diagram-service/tests/integration/: __init__.py
backend/diagram-service/tests/unit/: __init__.py  test_diagram_service.py
backend/project-service/: pyproject.toml
backend/project-service/app/: config.py  main.py
backend/project-service/app/api/v1/: router.py
backend/project-service/app/common/database/: mysql.py
backend/project-service/app/common/models/: base.py  report.py  threat_risk.py
backend/project-service/app/common/schemas/: asset.py
backend/project-service/app/repositories/: __init__.py  project_repo.py
backend/project-service/app/services/: project_service.py
backend/project-service/tests/: conftest.py
backend/project-service/tests/integration/: __init__.py  test_project_api.py
backend/project-service/tests/unit/: test_project_service.py
backend/report-service/: pyproject.toml
backend/report-service/app/: config.py  main.py
backend/report-service/app/api/v1/: router.py
backend/report-service/app/common/database/: milvus.py
backend/report-service/app/common/models/: __init__.py  asset.py  report.py  report_version.py  threat_risk.py
backend/report-service/app/common/schemas/: __init__.py  report_version.py  threat_risk.py
backend/report-service/app/generators/: __init__.py  excel_generator.py  pdf_generator.py  word_generator.py
backend/report-service/app/repositories/: report_repo.py
backend/report-service/app/services/: __init__.py  oneclick_service.py  report_service.py  version_service.py
backend/report-service/tests/: conftest.py
backend/report-service/tests/integration/: __init__.py
backend/report-service/tests/unit/: __init__.py  conftest.py  test_excel_generator_tara.py  test_generators.py
backend/threat-risk-service/: pyproject.toml
backend/threat-risk-service/app/: __init__.py  main.py
backend/threat-risk-service/app/api/v1/: router.py
backend/threat-risk-service/app/common/models/: threat_risk.py
backend/threat-risk-service/app/common/schemas/: project.py
backend/threat-risk-service/app/engines/: __init__.py  risk_calculator.py  stride_engine.py
backend/threat-risk-service/app/repositories/: __init__.py  threat_repo.py
backend/threat-risk-service/app/services/: __init__.py  attack_path_service.py  risk_service.py  threat_service.py
backend/threat-risk-service/tests/: conftest.py
backend/threat-risk-service/tests/integration/: __init__.py  test_threat_api.py
backend/threat-risk-service/tests/unit/: __init__.py  test_risk_calculator.py  test_stride_engine.py
tara-system/backend/agent-service/: Dockerfile  pyproject.toml
tara-system/backend/agent-service/app/: main.py
tara-system/backend/agent-service/app/agents/: asset_agent.py  report_agent.py  threat_risk_agent.py
tara-system/backend/agent-service/app/services/: orchestrator.py
tara-system/backend/agent-service/tests/integration/: __init__.py
tara-system/backend/agent-service/tests/unit/: __init__.py
tara-system/backend/asset-service/: Dockerfile  pyproject.toml
tara-system/backend/asset-service/app/repositories/: __init__.py
tara-system/backend/asset-service/app/services/: __init__.py  asset_service.py  damage_service.py
tara-system/backend/asset-service/tests/unit/: __init__.py  test_asset_service.py
tara-system/backend/diagram-service/: Dockerfile  pyproject.toml
tara-system/backend/diagram-service/app/: __init__.py  main.py
tara-system/backend/diagram-service/app/services/: diagram_service.py
tara-system/backend/diagram-service/tests/: __init__.py  conftest.py
tara-system/backend/diagram-service/tests/unit/: test_diagram_service.py
tara-system/backend/document-service/: Dockerfile  pyproject.toml
tara-system/backend/document-service/app/: __init__.py
tara-system/backend/document-service/app/parsers/: base_parser.py
tara-system/backend/document-service/app/repositories/: document_repo.py
tara-system/backend/document-service/app/services/: __init__.py  document_service.py
tara-system/backend/document-service/tests/: conftest.py
tara-system/backend/document-service/tests/integration/: __init__.py  test_document_api.py
tara-system/backend/document-service/tests/unit/: __init__.py  test_parsers.py
tara-system/backend/report-service/: Dockerfile  pyproject.toml
tara-system/backend/report-service/app/: __init__.py  config.py  main.py
tara-system/backend/report-service/app/generators/: __init__.py  pdf_generator.py  word_generator.py
tara-system/backend/report-service/app/repositories/: report_repo.py
tara-system/backend/report-service/app/services/: report_service.py
tara-system/backend/report-service/tests/: __init__.py  conftest.py
tara-system/backend/report-service/tests/unit/: test_generators.py
tara-system/backend/shared/: pyproject.toml
tara-system/backend/shared/tara_shared/: __init__.py
tara-system/backend/shared/tara_shared/config/: settings.py
tara-system/backend/shared/tara_shared/constants/: __init__.py  tara.py
tara-system/backend/shared/tara_shared/database/: __init__.py  elasticsearch.py  milvus.py  minio.py  mysql.py  neo4j.py
tara-system/backend/shared/tara_shared/schemas/: __init__.py  asset.py  document.py  report.py  (+1 more)
tara-system/backend/shared/tests/: conftest.py
tara-system/backend/threat-risk-service/: Dockerfile  pyproject.toml
tara-system/backend/threat-risk-service/app/: __init__.py  main.py
tara-system/backend/threat-risk-service/tests/: __init__.py  conftest.py
(+351 files in other folders)
