[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tara-agent-service"
version = "0.1.0"
description = "TARA AI Agent Service"
requires-python = ">=3.11"

dependencies = [
    "tara-shared",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "sse-starlette>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
]

[tool.setuptools.packages.find]
where = ["."]
