[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tara-asset-service"
version = "0.1.0"
description = "TARA Asset Identification Service"
requires-python = ">=3.11"

dependencies = [
    "tara-shared",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "neo4j>=5.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
