[project]
name = "tara-diagram-service"
version = "0.1.0"
description = "TARA System Diagram Service"
requires-python = ">=3.11"
dependencies = [
    "tara-shared",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "matplotlib>=3.8.2",
    "graphviz>=0.20.1",
    "networkx>=3.2.1",
    "Pillow>=10.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
