[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tara-document-service"
version = "0.1.0"
description = "TARA Document Parsing Service"
requires-python = ">=3.11"

dependencies = [
    "tara-shared",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "Pillow>=10.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
