[project]
name = "tara-report-service"
version = "0.1.0"
description = "TARA System Report Service"
requires-python = ">=3.11"
dependencies = [
    "tara-shared",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.8",
    "openpyxl>=3.1.2",
    "Jinja2>=3.1.3",
    "weasyprint>=60.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
