[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tara-threat-risk-service"
version = "0.1.0"
description = "TARA Threat and Risk Analysis Service"
requires-python = ">=3.11"

dependencies = [
    "tara-shared",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
